# multisig

./: README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-multisig.yml  rust-clippy.yml  static-analysis  static-analysis.yml
blinks/: package-lock.json  package.json
blinks/src/app/: page.tsx
clients/: index.ts  package-lock.json  package.json
clients/js/: package-lock.json  package.json
clients/js/src/accounts/: index.ts  multisig.ts  transaction.ts
clients/js/src/errors/: index.ts  solanaCoreMultisig.ts
clients/js/src/instructions/: approve.ts  cancelTx.ts  createTx.ts  editTx.ts  executeTx.ts  index.ts  initializeMultisig.ts  revokeApproval.ts
clients/js/src/programs/: solanaCoreMultisig.ts
clients/js/src/types/: authEvent.ts  index.ts  multisigInitialized.ts  transactionAccount.ts  (+6 more)
clients/rust/src/: programs.rs
idl/: multisig.json
multisig/: .gitignore  Anchor.toml  Cargo.toml  codama.js  package-lock.json  package.json
multisig/programs/multisig/: Cargo.toml
multisig/programs/multisig/src/: constants.rs  error.rs  lib.rs
multisig/programs/multisig/src/instructions/: approve.rs  auth.rs  cancel_tx.rs  close_tx.rs  edit_tx.rs  exec_tx.rs  init_multisig.rs  init_tx.rs  mod.rs  owners-threshold.rs  revoke_approval.rs
multisig/programs/multisig/src/state/: mod.rs  multisig.rs  transaction.rs
multisig/programs/multisig/src/utils/: assert_unique_owner.rs  mod.rs
multisig/programs/multisig/tests/: anchor.test.ts
multisig/tests/: anchor.test.ts  test_initialize.rs
scripts/: update_version.sh
(+48 files in other folders)
