[package]
name = "multisig"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []
anchor-debug = []
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = "0.31.1"
solana-security-txt = "1.1.1"


